# chatapp

./: .gitignore  .gitpod.yml  .mypy.ini  LICENSE  README.md  activate.bat  buildozer.spec  guiclient.spec  pyproject.toml  requirements.txt
javaClient/: build.gradle
javaClient/fabric/: build.gradle  gradle.properties
javaClient/fabric/src/main/java/com/enderzombi102/chatapp/: ChatApp.java
javaClient/fabric/src/main/java/com/enderzombi102/chatapp/client/: Builder.java  ChatAppClient.java
javaClient/fabric/src/main/java/com/enderzombi102/chatapp/client/screen/: ChatAppScreen.java
javaClient/fabric/src/main/java/com/enderzombi102/chatapp/mixin/: TitleScreenMixin.java
javaClient/fabric/src/main/resources/: chatapp.mixins.json  fabric.mod.json
javaClient/src/main/java/com/enderzombi102/chatapp/: Client.java  Message.java  Test.java  Util.java
javaClient/src/main/java/com/enderzombi102/chatapp/api/: Client.java  CloseCallback.java  MessageCallback.java
src/: chatapp.py  client.py  data.py  devstart.py  server.py  test.py  util.py
src/cliclient/: client.py  main.py
src/client/: Client.py  __main__.py  bcli.py  cli.py  gui.py  newcli.py  t.py  test.py
src/client/android/: main.py
src/common/: data.py
src/guiclient/: Client.py  main.py
src/server/: AServer.py  BaseClientHandler.py  ClientHandler.py  ReqHandler.py  Server.py  WSClientHandler.py  __main__.py  server.py
src/webclient/: client.py  index.html  jindex.html  wclient.py  webtypes.py
src/webclient/browser/: __init__.py  aio.py  ajax.py  websocket.py
