[tool.poetry]
	name = 'chatapp'
	version = '0.1.0'
	description = 'A simple socket-based chat, with too many platforms.'
	authors = [ 'ENDERZOMBI102 <enderzombi102.end@gmail.com>' ]
	license = 'MIT'

[tool.poetry.dependencies]
	python = '^3.10'
	websockets = '^10.3'
	Kivy = '^2.1.0'
	blessed = '^1.19.1'
	windows-curses = '^2.3.0'
wxPython = "^4.2.0"

[tool.poetry.dev-dependencies]

[build-system]
	requires = [ 'poetry-core>=1.0.0' ]
	build-backend = 'poetry.core.masonry.api'
